--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -8,6 +8,7 @@ jobs:
       - run: wget https://update.brisktest.com/brisk/latest/linux-amd64/brisk
       - run: chmod 700 brisk
       - run: ./brisk version
+      - run: ls -lrt
       - run: ./brisk
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
