--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -5,9 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: wget https://update.brisktest.com/brisk/latest/linux-amd64/brisk
-      - run: chmod 700 brisk
-      - run: ./brisk version
       - run: ls -lrt
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
@@ -19,4 +16,8 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
-      - run: ./brisk
+      - run: wget https://update.brisktest.com/brisk/latest/linux-amd64/brisk /tmp/brisk
+      - run: chmod 700 /tmp/brisk
+      - run: /tmp/brisk version
+      - run: /tmp/brisk
+
