--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -22,4 +22,7 @@ jobs:
       - name: Run Brisk 
         shell: 'script -q -e -c "bash {0}"'
         run: /tmp/brisk
+        env:
+          BRISK_API_TOKEN: ${{ secrets.BRISK_API_TOKEN }}
+          BRISK_API_KEY: ${{ secrets.BRISK_API_KEY }}
 
