--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -16,14 +16,14 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
-      - run: wget https://update.brisktest.com/brisk/latest/linux-amd64/brisk -O /tmp/brisk
+      - run: wget https://update.brisktest.com/brisk/latest/linux-amd64/brisk -O /tmp/brisk --no-cache
       - run: chmod 700 /tmp/brisk
       - run: /tmp/brisk version
       - name: Run Brisk 
         shell: 'script -q -e -c "bash {0}"'
         run: /tmp/brisk
         env:
-          BRISK_CI: "true"
+          BRISK_CI: "true "
           BRISK_APITOKEN: '${{ secrets.BRISK_APITOKEN }}'
           BRISK_APIKEY: '${{ secrets.BRISK_APIKEY }}'
 
