--- a/.github/workflows/brisk-ci.yml
+++ b/.github/workflows/brisk-ci.yml
@@ -1,7 +1,7 @@
-name: GitHub Actions Demo
+name: Brisk CI
 on: [push]
 jobs:
-  Explore-GitHub-Actions:
+  Brisk-CI:
     runs-on: ubuntu-latest
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
